--- a/example.html
+++ b/example.html
@@ -7,9 +7,9 @@
   <body>
     <textarea id="source" rows="30" cols="80"></textarea>
     <script>
-      var codemirror = require('codemirror')
+      require('codemirror')
       var textarea = document.getElementById('source')
-      codemirror.fromTextArea(textarea)
+      CodeMirror.fromTextArea(textarea)
     </script>
   </body>
 </html>
